# ntp-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  NATURAL_LANGUAGE_COMMANDS.md  README.md  SECURITY.md  SETUP_GUIDE.md  launch_ntpmcp.sh  pyproject.toml  setup_timezone.py  setup_timezone.sh
config/: mcp.json
src/ntp_mcp/: __init__.py  __main__.py  server.py
